<resources>
    <string name="app_name">Auxiliar Do Instrumentista</string>
    <string name="app_name_splash">Auxiliar Do\nInstrumentista</string>
    <string name="addBtn">Adicionar</string>
    <string name="startBtn">Iniciar</string>
    <string name="finishBtn">Concluir</string>
    <string name="cria_activity">Crie a Lista de Hinos</string>
    <string name="culto_activity">Culto Iniciado</string>
    <string name="title_activity_culto_main">Culto Iniciado</string>

    <string name="criar_hint">Digite o hino…</string>
    <string name="sem_hinos">Adicione hinos para dar início ao culto</string>
    <string name="delete_opt">Pressione e segure para remover sugestões</string>

    <string name="remover">Remover item</string>

    <string name="novo">Nº: %d</string>
    <string name="antigo">Nº.a.: %d</string>


    <!-- SEÇÃO SOBRE -->
    <string name="sobre">Sobre</string>

    <string name="link">Links</string>
    <string name="prob">Encontrou algum erro? Tem novas ideias?</string>
    <string name="suges">Enviar sugestões para o desenvolvedor</string>
    <string name="atualizar">Verificar últimas versões disponíveis</string>
    <string name="cod_font">Ver código-fonte no Gitlab</string>
    <string name="novaLista">   Conheça a Nova Lista da Coletânea!</string>

    <string name="descr">Descrição</string>
    <string name="sobre_msg">
			Com intuito de ajudar instrumentistas e músicos de igrejas, focado nos Grupos de Louvor da
			Igreja Cristã Maranata, o Auxiliar do Instrumentista visa a organização dos hinos que serão entoados em
			determinado evento ou culto, evitando o esquecimento e ajudando a organização e localização dos músicos,
			diminuindo a chance de erros. O aplicativo não tem qualquer vínculo oficial com a ICM e é livre, de código aberto.
    </string>

    <string name="desenvolv">Desenvolvedor</string>
    <string name="img_cop">Direitos das imagens usadas</string>

    <!-- SEÇÃO ESTATÍSTICAS -->
    <string name="estatisticas">Estatísticas</string>
    <string name="limparDados">Limpar registro</string>

</resources>
